# QLink

./: .clang-format  .gitignore  CMakeLists.txt  ElimateTest.cpp  ElimateTest.h  Game.cpp  Game.h  PauseMenu.ui  README.md  main.cpp
Game/: CMakeLists.txt  Game.cpp  Game.h
Game/Entity/: CMakeLists.txt  Entity.h  Manager.cpp  Manager.h  Sprite.cpp  Sprite.h
libEntity/: Animation.cpp  Animation.h  Box.cpp  Box.h  Bullet.cpp  Bullet.h  CMakeLists.txt  EnemyPlane.cpp  EnemyPlane.h  Entity.cpp  Entity.h  EntityResList.h  Flash.cpp  Flash.h  Hero.cpp  Hero.h  HeroResourceList.h  Item.cpp  Item.h  Manager.cpp  Manager.h  Map.cpp  Map.h  MyEntity  PlayerPlane.cpp  PlayerPlane.h  ResourceList.h  Shuffle.cpp  Shuffle.h  Sprite.cpp  Sprite.h
libMyWidget/: CMakeLists.txt  FinishMenu.cpp  FinishMenu.h  MyProgressBar.cpp  MyProgressBar.h  MyWidget  MyWidgetResList.h  PauseMenu.cpp  PauseMenu.h  ScoreBoard.cpp  ScoreBoard.h  StartMenu.cpp  StartMenu.h
res/: saveTemplate.txt
